create input line by line

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #### FOLDERS #######
 raw_processed_data/
-
+raw_processed_data_Kaweah/
 ###### FILES #######
 *.sublime-project
 *.sublime-workspace
